<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.danielescobar.micalculadora.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/operacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:textSize="50dp"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical">
            <Button
                android:id="@+id/bBorrar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/midnightblue"
                android:onClick="onButtonClickedborrar"
                android:text="@string/Borrar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="2dp"
                />
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bSiete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkslateblue"
                    android:onClick="onButtonClicked7"
                    android:text="@string/siete"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bOcho"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkslateblue"
                    android:onClick="onButtonClicked8"
                    android:text="@string/ocho"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bNueve"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkslateblue"
                    android:onClick="onButtonClicked9"
                    android:text="@string/nueve"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bSuma"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/midnightblue"
                    android:onClick="onButtonClickedsuma"
                    android:text="@string/suma"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bCuatro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkslateblue"
                    android:onClick="onButtonClicked4"
                    android:text="@string/cuatro"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bcinco"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkslateblue"
                    android:onClick="onButtonClicked5"
                    android:text="@string/cinco"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bseis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkslateblue"
                    android:onClick="onButtonClicked6"
                    android:text="@string/seis"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bmenos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/midnightblue"
                    android:onClick="onButtonClickedmenos"
                    android:text="@string/menos"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/buno"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkslateblue"
                    android:onClick="onButtonClicked1"
                    android:text="@string/uno"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bdos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkslateblue"
                    android:onClick="onButtonClicked2"
                    android:text="@string/dos"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btres"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkslateblue"
                    android:onClick="onButtonClicked3"
                    android:text="@string/tres"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bmultiplicacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/midnightblue"
                    android:onClick="onButtonClickedmulti"
                    android:text="@string/multi"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bpunto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkslateblue"
                    android:onClick="onButtonClickedpunto"
                    android:text="@string/punto"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bcero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkslateblue"
                    android:onClick="onButtonClicked0"
                    android:text="@string/cero"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bigual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/darkslateblue"
                    android:onClick="onButtonClickedigual"
                    android:text="@string/igual"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bdivicion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/midnightblue"
                    android:onClick="onButtonClickeddivicion"
                    android:text="@string/divicion"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>

